Added games route pattern.
