# routes/index.js
@@ -5,6 +5,7 @@ const { getHome } = require('../controllers/homeController');
 
 router.get('/', getHome);
 
+router.use('/games', require('./games'));
 router.use('/api-docs', require('./swagger'));
 
 module.exports = router;
